# tuwien-dl-nlp

./: LICENSE  README.md  pyproject.toml
exercises/: deepspeed.ipynb  gpt_finetuning.ipynb  rnn_lstm.ipynb  word2vec_ner_classification.ipynb  word2vec_sentiment_classification.ipynb
